# AI-Subtitle-Editor

./: G-5.md  GMT20250117-120109_Recording-30.csv  GMT20250117-120109_Recording-30.md  GMT20250117-120109_Recording-5.csv  GMT20250117-120109_Recording.cc.csv  GMT20250117-120109_Recording.md  Lars2-Lutherian-China-20240920 copy.cc.md  Lars2-Lutherian-China-20240920.cc.csv  Lars2-Lutherian-China-20240920.cc.md  Lars2-Lutherian-China-20240920.csv  Lars2-Lutherian-China-20240920.md  README.md  Ware-Orthodox-other-Christian.csv  Ware-Orthodox-other-Christian.md  add-zh-punctuation.py  cleaned_subtitles.docx  cleaned_subtitles.json  cleaned_subtitles.md  cleaned_text.docx  cleaned_text.md  cli.py  cpp.py  lmt.py  main-min-cli.py  main-min.py  main.py  maint.py  minc.py  output.md  panda-cvs.py  panda-md.py  pdf-convert-v01.py  pdf-md.py  pyproject.toml  requirements.txt  rm-repeat.py  sub-md-cvs-v0.1.py  sub-md-cvs-v0.2-punc.py  sub-md-cvs-v0.2.py  sub-md-cvs-v0.3.py  (+11 more)
audio/: a_w-whisper.py
audiobk/: a_w_cpp.py  a_w_groq.py
example/: GMT20250117-120109_Recording-5.md  Lars2-Lutherian-China-20240920.cc.md  Lars2.md  Lydia-20250214-lent.csv  Lydia-20250214-lent.md
flagged/: log.csv
flagged/files/f8ddaf86850b93d947f6/: GMT20240913-120417_Recording.cc.vtt
rewrite/: __init__.py  lmw.py
src/: a_w-whisper.py  a_w1.py  audio_whisperx.py  auto_paragraphy.ipynb  d_timestamp.py  del_timestamps.py  hay1.py  hay2.py  hay3-file.py  hays-component-rj.py  rm_time_join_line.py
src/.ipynb_checkpoints/: Lesson_1-checkpoint.ipynb  audio_whisper-checkpoint.py
src/hays_t/: __init__.py
src/sub_ed/: __init__.py
subtitle/: sub-md-cvs-input-v0.3.py  sub-md-cvs-input-v0.4.py  sub-md-cvs-v0.2.py  sub-md-cvs.py  sub-rewrite-md-cvs-v0.1.py  sub-rewrite-spacy-dspy-md-cvs-0.2.py  sub-write1.py
test/: main-min-bk.py  panda-md-cvs.py  remove-oral.py  sub-md-cvs-input-v0.3.py  sub-rewrite-spacy-dspy-print0.3.py  utils-bk.py
