[project]
name = "Sub-editor"
version = "0.1.0"
description = "This is for my personal usage to transform the oral lecture into writen ones."
authors = [
    { name = "ajia", email = "yyjfwoaini@gmail.com" }
]
dependencies = [
    "marimo>=0.10.17",
    "pandas>=2.2.3",
    "spacy>=3.8.4",
    "ocrmypdf>=16.8.0",
    "marker-pdf>=1.3.4",
    "pymupdf>=1.25.2",
    "gradio>=5.16.0",
    "openai-whisper>=20240930",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "openai-whisper>=20240930",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hays_t"]
