[project]
name = "sub-ed"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ajia", email = "yyjfwoaini@gmail.com" }
]
dependencies = [
    "openai-whisper>=20240930",
    "gradio>=5.16.0",
    "moviepy>=2.1.2",
    "pydub>=0.25.1",
    "spacy>=3.8.4",
    "pandas>=2.2.3",
    "dspy>=2.6.3",
    "pip>=25.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sub_ed"]
